--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,2 +1,17 @@
-<h1>Customers#edit</h1>
-<p>Find me in app/views/customers/edit.html.erb</p>
+<div class="row">
+  <div class="col-lg-12">
+      <h1>顧客情報編集</h1>
+      <% if @customer.errors.any? %>
+        <div class="alert alert-danger">
+          <p><b><%= @customer.errors.count %>件のエラーがあります</b></p>
+          <ul>
+          <% @customer.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
+      <% end %>
+      <%= render 'form' %>
+  </div>
+</div>
+
