--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,2 +1,26 @@
-<h1>Customers#index</h1>
-<p>Find me in app/views/customers/index.html.erb</p>
+<div class="row">
+  <div class="col-lg-12">
+    <h1>顧客情報一覧</h1>
+    <p>お客様情報が表示されます。</p>
+    <table class="table table-striped">
+      <head>
+        <tr>
+          <th>姓</th>
+          <th>名</th>
+          <th>電子メール</th>
+          <th>リンク</th>
+        </tr>
+      </head>
+      <tbody>
+      <% @customers.each do |customer| %>
+        <tr>
+          <td><%= customer.family_name %></td>
+          <td><%= customer.given_name %></td>
+          <td><%= customer.email %></td>
+          <td><%= link_to '詳細', customer, class: "btn btn-primary" %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
