--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -6,6 +6,10 @@
         <dd>
           <%= @customer.full_name %>
         </dd>
+        <dt>会社名</dt>
+        <dd>
+          <%= @customer.company.name %>
+        </dd>
         <dt>電子メール</dt>
         <dd>
           <%= @customer.email %>
