--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -2,6 +2,31 @@
   <div class="col-lg-12">
     <h1>顧客情報一覧</h1>
     <p>お客様情報が表示されます。</p>
+
+    <%= search_form_for @q do |f| %>
+    <div class="row">
+      <div class="col-sm-2">
+        <%= f.label :family_name, "姓" %>
+        <%= f.search_field :family_name_cont, class: "form-control" %>
+      </div>
+      <div class="col-sm-2">
+        <%= f.label :given_name, "名" %>
+        <%= f.search_field :given_name_cont, class: "form-control" %>
+      </div>
+      <div class="col-sm-3">
+        <%= f.label :company_name, "会社名" %>
+        <%= f.search_field :company_name_cont, class: "form-control" %>
+      </div>
+      <div class="col-sm-3">
+        <%= f.label :email, "電子メール" %>
+        <%= f.search_field :email_cont, class: "form-control" %>
+      </div>
+      <div class="col-sm-2">
+      <%= f.submit "検索" %>
+      </div>
+    </div>
+    <% end %>
+
     <table class="table table-striped">
       <head>
         <tr>
