--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,9 @@
     <div class="collapse navbar-collapse" id="navbar-collapse-menu">
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
+          <p class="navbar-text">
+          <%= current_user.family_name %><%= current_user.given_name %>さんようこそ！
+          </p>
           <li><%= link_to "設定変更", edit_user_registration_path %></li>
           <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
         <% else %>
